# pyspark-blueprint

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  config.ini  docker-compose.yaml  dockerfile  pyproject.toml
src/base/: etl_components.py
src/connector/: base_connector.py
src/extractor/: base_extractor.py
src/loader/: base_loader.py
src/transformer/: base_transformer.py
